# thermal-inference

./: .gitignore  10channel.py  README.md  camera_yolo_inference.py  inference_yolo.py  main_localq.py  main_timeshift.py  optical_flow.py  pyproject.toml  show_camera_stream.py  ultralytics_opencv_onnx_inference_example.py  yololabel.py
Models/: YOLOnnx.py  mobilenet_v2_tsm.py
models/: YOLOnnx.py
senxor/: mi48.py
utils/: datamaker.py  detection.py  preprocess.py
